[gd_scene load_steps=11 format=3 uid="uid://ytghrgaoqy7f"]

[ext_resource type="Shader" path="res://blur.gdshader" id="1_o08cb"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="2_yxor6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r3hya"]
shader = ExtResource("1_o08cb")
shader_parameter/blur = 0.0
shader_parameter/brightness = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_pfaph"]
font_size = 41

[sub_resource type="InputEventKey" id="InputEventKey_d5s7g"]
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_u2hel"]
events = [SubResource("InputEventKey_d5s7g")]

[sub_resource type="Animation" id="Animation_ya4o4"]
resource_name = "Pause"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cl6pg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_epkqp"]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Button Panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d5tew"]
_data = {
"Pause": SubResource("Animation_ya4o4"),
"RESET": SubResource("Animation_cl6pg"),
"Unpause": SubResource("Animation_epkqp")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_yxor6")

[node name="PauseMenu" type="ColorRect" parent="."]
process_mode = 3
material = SubResource("ShaderMaterial_r3hya")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
color = Color(1, 1, 1, 0)

[node name="Button Panel" type="CenterContainer" parent="PauseMenu"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -225.0
offset_right = 128.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu/Button Panel"]
custom_minimum_size = Vector2(256, 450)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Button Panel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/Button Panel/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/Button Panel/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 8)
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/Button Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_pfaph")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PauseMenu/Button Panel/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 15)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/Button Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
shortcut = SubResource("Shortcut_u2hel")
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu/Button Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Restart"

[node name="MainMenu" type="Button" parent="PauseMenu/Button Panel/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Exit to main menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="PauseMenu"]
autoplay = "Unpause"
libraries = {
"": SubResource("AnimationLibrary_d5tew")
}

[node name="ded_screen" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="ded_screen"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ded_screen/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ded_screen/PanelContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ded_screen/PanelContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ded_screen/PanelContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 43
bbcode_enabled = true
text = "[center]You ded :("

[node name="return" type="Button" parent="ded_screen/PanelContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 50)
layout_mode = 2
text = "Return to main menu"
